static/style.css
/* ... */
.hero:after {
  content: "";
  background: var(--brand-red);
  height: 100%;
  width: 100%;
  position: absolute;
  opacity: 0.5;
  z-index: -1;
}

.hero * {
  color: white;
}

.hero span {
  font-size: 20px;
  text-transform: uppercase;
  font-weight: 700;
}

.hero h1 {
  padding-right: 650px;
  margin: 0;
}

/* ------------------------------------------------------
PROJECTS SECTION
------------------------------------------------------ */

.project-section h2 {
  color: white;
}

.projects {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(1, 1fr);
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

.project-item {
  height: 700px;
  border-radius: 10px;
  overflow: hidden;
  background-image: url("../assets/img/project-default-bg.svg");
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
}

.project-item a {
  background: linear-gradient(to bottom, rgba(58, 52, 51, 0.65) 0%, rgba(58, 52, 51, 0) 100%);
  display: inline-block;
  width: 100%;
  height: 100%;
  padding: 50px 25px 50px 50px;
  text-decoration: none;
}

.project-item h3 {
  color: white;
  font-size: 30px;
  /* position: absolute;
  top: 50px;
  left: 50px; */
  padding-right: 20%;
}

.button-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

/* ------------------------------------------------------
ABOUT ME SECTION
------------------------------------------------------ */

.about-me h2 {
  text-align: center;
}

.about-me p {
  width: 780px;
  margin: auto;
}

/* ------------------------------------------------------
BLOG POSTS
------------------------------------------------------ */

.blog-section h2 {
  color: white;
}

.blog-posts {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

.blog-post-item {
  background: url("../assets/img/blog-post-bg-default.svg") no-repeat;
  background-size: cover;
  border-radius: 10px;
  overflow: hidden;
}

.blog-post-item a {
  width: 100%;
  height: 500px;
  background: linear-gradient(to bottom, rgba(58, 52, 51, 0.65) 0%, rgba(58, 52, 51, 0) 100%);
  display: inline-block;
  padding: 50px;
  text-decoration: none;
}

.blog-post-item h3 {
  color: white;
}

/* ------------------------------------------------------
MY SKILLS
------------------------------------------------------ */

.my-skills h2 {
  text-align: center;
}

.my-skills-table {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

.my-skills-cell {
  display: flex;
  flex-wrap: wrap;
}

.my-skills-cell h3 {
  width: 100%;
  text-align: center;
}

.skills-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  width: 100%;
  padding: 80px 40px;
}

.skill-item {
  display: flex;
  flex-direction: column;
  /* width: 30%; */
  text-align: center;
}

.skill-item img {
  height: 70px;
  width: auto;
  margin: auto;
}

.skill-item span {
  margin: 25px 0;
}

/* ------------------------------------------------------
BLOG POST
------------------------------------------------------ */

main {
  position: relative;
  z-index: -2;
}

/* Feature IMG */

.feature-img {
  height: 100vh;
  position: sticky;
  width: 100%;

  top: 0;

  background: url("../assets/img/blog-post-bg-default.svg") no-repeat;
  background-size: cover;
  overflow: hidden;

  z-index: -1;
}

/* Article */

.post {
  margin-top: -40vh;
  background: var(--creme);
  border-radius: 10px;
  padding: 65px 130px;
  z-index: 5;
}

.post-heading {
  width: 1050px;
}

.post p {
  margin-right: 40%;
}

.post p:nth-of-type(1) {
  font-style: italic;
  color: #67605e;
  font-weight: 500;
  line-height: 1.5em;
  font-size: 20px;
}

/* Comment Section */

.comments {
  padding-top: 200px;
  margin-top: -160px;
  z-index: -1;
  text-align: center;
  position: relative;
}

.comment-info {
  font-size: 20px;
}

.first-level-comment-list,
.first-level-comment-list ul {
  list-style: none;
}

.first-level {
  border-radius: 10px;
  margin-bottom: 60px;
}

.second-level {
  margin-left: 85px;
}

.comment-wrap {
  display: grid;
  grid-template-columns: 123px auto;
  grid-template-rows: 123px 1fr 129px;
  grid-column-gap: 0px;
  grid-row-gap: 0px;

  padding: 30px 45px;
}

.author-profile {
  grid-area: 1 / 1 / 2 / 2;
}

.author-profile img {
  width: 70px;
  border-radius: 10px;
}

.author-info {
  grid-area: 1 / 2 / 2 / 3;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
}

.author-comment-body {
  grid-area: 2 / 2 / 3 / 3;
  text-align: left;
}

.author-comment-body p {
  margin-right: 270px;
}

.author-name {
  display: block;
  font-size: 25px;
  font-weight: 700;
  margin-bottom: 20px;
}

.author-date {
  display: block;
  margin-bottom: 45px;
}

.comment-reply {
  grid-area: 3 / 2 / 4 / 3;
  text-align: left;
}

/* ------------------------------------------------------
CONTACT FORM
------------------------------------------------------ */

.contact {
  text-align: center;
}

/* ------------------------------------------------------
FOOTER NAVIGATION
------------------------------------------------------ */

footer {
  padding: 65px 0 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer-content {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 0px;
  margin-bottom: 60px;
}

footer span {
  color: var(--grey);
  font-weight: 700;
  font-size: 20px;
  display: inline-block;
  width: 170px;
  margin-bottom: 25px;
}

footer p,
footer a {
  color: white;
  text-decoration: none;
  display: inline-block;
  width: 350px;
}

.footer-content ul {
  list-style: none;
}

.footer-content ul li {
  margin-bottom: 10px;
}
/* ... */

